tests/expectations/compiler/integers/u128/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'u128'
    --> compiler-test:5:15
     |
   5 |     let i = 1 u128;
     |               ^^^^
